--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,14 @@ ul{
 .wrapper {
   background-color: white;
   min-width: 375px;
+  min-height: 100vh;
   width: 60vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
+  
+}
+section{
   padding: 0 16px;
 }
