--- a/src/Content.css
+++ b/src/Content.css
@@ -6,28 +6,26 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-
 }
-.search{
+.search {
   min-width: 343px;
   width: 100%;
   height: 40px;
   display: flex;
   flex-direction: row;
-  
 }
 .search_bar {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   border: none;
   box-sizing: border-box;
-  
+
   width: 100%;
   height: 100%;
   background-color: #f1f3f5;
   padding-left: 16px;
 }
-.search_bar_icon{
+.search_bar_icon {
   width: 33px;
   height: 100%;
   background-color: #f1f3f5;
@@ -38,6 +36,8 @@
 }
 
 .logo {
+  width: 100px;
+  height: 115px;
   display: flex;
   margin: 32px 0 48px 0;
 }
@@ -53,34 +53,33 @@
   border-radius: 10px;
   overflow: hidden;
 }
-.banner img{
+.banner img {
   height: 100%;
   object-fit: cover;
 }
-.dropdown-header{
+.dropdown-header {
   height: 46px;
-  color:#3C95FF ;
+  color: #3c95ff;
   font-family: Noto Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 18px;
-display: flex;
-align-items: center;
-cursor: pointer;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
 
-.dropdown-block{
+.dropdown-block {
   display: flex;
   flex-direction: row;
   align-items: center;
- 
 }
-.pf{
-  border-bottom: 1px solid #E9ECEF;
+.pf {
+  border-bottom: 1px solid #e9ecef;
   height: 71px;
 }
-.major-wrapper{
+.major-wrapper {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
@@ -92,85 +91,83 @@ cursor: pointer;
   line-height: 18px;
   text-align: center;
   letter-spacing: -0.02em;
-  color: #343A40;
+  color: #343a40;
   justify-content: space-between;
 }
-.major-block{
+.major-block {
   min-width: 109px;
-  
+
   height: 34px;
-  background: #F1F3F5;
-border-radius: 4px;
-display: flex;
-margin-bottom: 8px;
-justify-content: center;
-align-items: center;
+  background: #f1f3f5;
+  border-radius: 4px;
+  display: flex;
+  margin-bottom: 8px;
+  justify-content: center;
+  align-items: center;
 }
-.major-block p{
+.major-block p {
   margin: 0px;
   font-family: Noto Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 13px;
-line-height: 18px;
-/* identical to box height, or 138% */
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  /* identical to box height, or 138% */
 
-text-align: center;
-letter-spacing: -0.02em;
+  text-align: center;
+  letter-spacing: -0.02em;
 
-/* Gray8 */
+  /* Gray8 */
 
-color: #343A40;
+  color: #343a40;
 }
-.block-right{
+.block-right {
   width: 100%;
   text-align: left;
 }
-.block-right span{
+.block-right span {
   font-family: Noto Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 18px;
-/* identical to box height, or 129% */
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  /* identical to box height, or 129% */
 
-letter-spacing: -0.02em;
+  letter-spacing: -0.02em;
 
-/* Gray8 */
+  /* Gray8 */
 
-color: #343A40;
-
+  color: #343a40;
 }
-.block-right p{
+.block-right p {
   font-family: Noto Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 13px;
-line-height: 18px;
-/* identical to box height, or 138% */
-margin: 3px 0px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13px;
+  line-height: 18px;
+  /* identical to box height, or 138% */
+  margin: 3px 0px;
 
-letter-spacing: -0.02em;
+  letter-spacing: -0.02em;
 
-/* 회색 글씨 */
+  /* 회색 글씨 */
 
-color: #777777;
+  color: #777777;
 }
-.block-left{
+.block-left {
   width: 56px;
 }
-.rank-img{
+.rank-img {
   object-fit: cover;
   width: 24px;
   height: 24px;
-  
 }
-.plus{
+.plus {
   object-position: 33% 0;
 }
-.minus{
+.minus {
   object-position: 100% 0;
 }
-.zero{
+.zero {
   object-position: 66% 0;
 }
