--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -11,20 +11,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
- width: 100%;
- height: 44px;
+  width: 100%;
+  height: 44px;
 }
-.nav ul{
+.nav ul {
   height: 100%;
 }
 .nav-logo {
   display: flex;
   width: 82.77px;
 }
-.nav-logo a{
+.nav-logo a {
   align-items: center;
   display: flex;
-  
 }
 .nav-logo img {
   margin: auto;
@@ -33,11 +32,13 @@
   display: flex;
   font-size: 14px;
   letter-spacing: -0.02em;
-
 }
-.none{
-font-weight: normal;
-line-height: 19px;
-font-style: normal;
-color: #333333;
+.none {
+  font-weight: normal;
+  line-height: 19px;
+  font-style: normal;
+  color: #333333;
+}
+.none :-webkit-any-link {
+  color: #333333;
 }
