--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,31 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
-html,body,a,span,p,* {
+html,
+body,
+a,
+span,
+p,
+* {
   font-family: "Noto Sans KR", sans-serif !important;
 }
 
 body,
 html {
   margin: 0;
-  background-color: rgb(236, 236, 236);
+  background-color: white;
 }
-ul{
+ul {
   margin: 0px;
 }
 .wrapper {
   background-color: white;
-  min-width: 375px;
+  min-width: 320px;
   min-height: 100vh;
   width: 60vw;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   margin: 0 auto;
-  
 }
-section{
+section {
   padding: 0 16px;
 }
