--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -9,7 +9,7 @@
   overflow: hidden;
 }
 .search {
-  min-width: 343px;
+  min-width: 288px;
   width: 100%;
   height: 40px;
   display: flex;
@@ -56,13 +56,15 @@
 .comment-box {
   margin: 8px 4px;
   height: 118px;
-  width: 343px;
+  min-width: 288px;
+  max-width: 320px;
   background: #ffffff;
   border: 0.5px solid #ced4da;
   border-radius: 8px;
   color: #343a40;
   padding: 16px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .box-header {
   font-family: Noto Sans;
@@ -179,6 +181,7 @@
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
+  word-break: keep-all;
   line-height: 18px;
   /* identical to box height, or 138% */
   margin: 3px 0px;
@@ -431,6 +434,9 @@
 
   color: #343a40;
 }
+.detail-comment-more img {
+  margin-left: 6.6px;
+}
 .comment-wrapper {
   height: 192px;
   padding: 16px 20px;
@@ -491,4 +497,29 @@
 
 .lock {
   background-color: rgba(0, 0, 0, 0.349);
+}
+
+.ranking {
+  object-fit: cover;
+  width: 24px;
+  height: 24px;
+}
+
+.contents-text {
+  margin: 30px 0 20px 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  color: #343a40;
+}
+.contents-text span {
+  color: #3c95ff;
+  font-style: normal;
+  font-weight: bold;
+}
+.devider {
+  height: 8px;
+  width: 100%;
+  background-color: #f8f9fa;
 }
