--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -13,6 +13,11 @@
   justify-content: space-between;
   width: 100%;
   height: 44px;
+  position: sticky;
+  height: 44px;
+  top: 0;
+  z-index: 2;
+  background-color: #ffffff;
 }
 .nav ul {
   height: 100%;
