--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -1,17 +1,22 @@
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
-html,body,a,span,p,* {
+html,
+body,
+a,
+span,
+p,
+* {
   font-family: "Noto Sans KR", sans-serif !important;
 }
 
 body,
 html {
   margin: 0;
-  background-color: rgb(236, 236, 236);
+  background-color: white;
 }
-ul{
+ul {
   margin: 0px;
 }
-a{
+a {
   text-decoration: none;
   outline: none;
 }
@@ -30,7 +35,7 @@ a{
   width: 0;
   height: 0;
 }
-Button{
+Button {
   border: none;
   margin: 0;
   padding: 0;
@@ -62,8 +67,8 @@ Button::-moz-focus-inner {
 }
 .wrapper {
   background-color: white;
-  min-width: 375px;
-  width: 60vw;
+  min-width: 320px;
+  max-width: 640px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -71,4 +76,6 @@ Button::-moz-focus-inner {
   padding: 0 16px;
   box-sizing: border-box;
 }
-
+.wrapper section {
+  flex: 1;
+}
