--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -15,27 +15,31 @@
   display: flex;
   flex-direction: row;
   margin: 16px 0;
+  position: relative;
 }
 .search_bar {
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-radius: 10px;
   border: none;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
   background-color: #f1f3f5;
-  padding-left: 16px;
+  padding-left: 32px;
+  position: relative;
+}
+.search a {
+  position: absolute;
+  height: 100%;
 }
 .search_bar_icon {
   width: 33px;
   height: 100%;
-  background-color: #f1f3f5;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
   display: flex;
   margin: 0 auto;
 }
-
+.search_bar_icon img {
+  margin: 0 auto;
+}
 .logo {
   width: 100px;
   height: 115px;
@@ -85,6 +89,7 @@
 .box-contents {
   width: 100%;
   -webkit-line-clamp: 3;
+  line-clamp: 3;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   white-space: normal;
@@ -93,6 +98,7 @@
   font-size: 13px;
   line-height: 20px;
   overflow: hidden;
+  height: 76px;
 }
 .header {
   height: 46px;
@@ -154,6 +160,12 @@
 .block-right {
   width: 25%;
   text-align: right;
+}
+.dropdown_icon {
+  height: 46px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .dropdown-block span {
   font-family: Noto Sans;
@@ -254,6 +266,7 @@
 .detail-info {
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 .detail-info span {
   font-family: Noto Sans;
@@ -437,7 +450,7 @@
 }
 .comment-wrapper {
   height: auto;
-  padding: 16px 20px;
+  padding: 16px 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -553,7 +566,7 @@
   line-height: 18px;
   color: #868e96;
   background-color: #f1f3f5;
-  width: 99px;
+  padding: 0 10px;
   height: 26px;
   border-radius: 2px;
   margin-right: 8px;
@@ -581,7 +594,7 @@
   --st-modal-transition: all !important;
 }
 .modal-window {
-  padding: 12px 16px 16px 16px;
+  padding: 6px 16px 16px 16px;
 }
 .modal-text {
   font-style: normal;
@@ -684,4 +697,27 @@
 }
 .icon img {
   height: 100%;
+}
+.loading {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  cursor: wait;
+}
+
+.loading img {
+  height: 10vw;
+  -webkit-animation: rotation 2s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+  }
 }
