--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -267,6 +267,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+  word-break: keep-all;
 }
 .detail-info span {
   font-family: Noto Sans;
