--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -26,6 +26,7 @@
   background-color: #f1f3f5;
   padding-left: 32px;
   position: relative;
+  font-size: 14px;
 }
 .search a {
   position: absolute;
@@ -69,6 +70,9 @@
   padding: 16px;
   box-sizing: border-box;
   overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 .box-header {
   font-family: Noto Sans;
@@ -98,7 +102,9 @@
   font-size: 13px;
   line-height: 20px;
   overflow: hidden;
-  height: 76px;
+}
+.box-contents p {
+  margin: 0;
 }
 .header {
   height: 46px;
@@ -195,11 +201,12 @@
 
   /* 회색 글씨 */
 
-  color: #777777;
+  color: #868e96;
 }
 .block-center {
   width: 100%;
 }
+
 .block-left {
   width: 56px;
 }
@@ -247,7 +254,10 @@
   height: 8px;
   width: 100%;
 }
-
+.detail-graph {
+  width: 100%;
+  height: 100%;
+}
 .detail-box {
   display: flex;
   flex-direction: row;
@@ -277,6 +287,7 @@
   letter-spacing: -0.02em;
   color: #343a40;
   word-break: keep-all;
+  margin-bottom: 4px;
 }
 .detail-info p {
   font-family: Noto Sans;
@@ -498,7 +509,7 @@
   color: #343a40;
 }
 .comment-footer {
-  color: #3c95ff;
+  color: #868e96;
   font-style: normal;
   font-weight: normal;
   font-size: 13px;
@@ -508,7 +519,9 @@
   flex-direction: row;
   margin-top: 12px;
 }
-
+.comment-footer span {
+  color: #3c95ff;
+}
 .lock {
   background-color: rgba(0, 0, 0, 0.349);
 }
