--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -43,8 +43,8 @@
   font-weight: normal;
   line-height: 19px;
   font-style: normal;
-  color: #333333;
+  color: #343a40;
 }
 .none :-webkit-any-link {
-  color: #333333;
+  color: #343a40;
 }
