--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -12,6 +12,7 @@ body,
 html {
   margin: 0;
   background-color: white;
+  -webkit-overflow-scrolling: touch;
 }
 ul {
   margin: 0px;
@@ -76,7 +77,7 @@ Button::-moz-focus-inner {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  padding: 0 16px;
+  padding: 0;
   box-sizing: border-box;
 }
 .wrapper section {
