--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -16,8 +16,9 @@
   position: sticky;
   height: 44px;
   top: 0;
-  z-index: 2;
+  z-index: 999;
   background-color: #ffffff;
+  box-sizing: border-box;
 }
 .nav ul {
   height: 100%;
