--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -691,16 +691,17 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  font-size: 13px;
+  padding: 0 19.5px;
 }
 .pagenation ul {
   padding: 0;
   flex: 1;
   display: flex;
-  flex-grow: 3;
   justify-content: space-between;
+  max-width: 320px;
 }
 .pagenation a {
-  flex-grow: 1;
   display: flex;
 }
 .pagenation li {
@@ -748,9 +749,9 @@
   position: absolute;
   height: 100%;
   width: 100%;
+  z-index: 10;
   text-align: center;
   background-color: #3c94ffe6;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   color: white;
   font-style: normal;
 }
@@ -785,14 +786,15 @@
   height: 24px;
   margin-right: 8px;
 }
-
-.modal {
-  inset: 0px;
+.modal-wrapper {
   max-width: 640px;
   margin: 0 auto;
+  height: 100%;
+}
+.modal {
+  width: 100%;
   display: flex;
-  flex: 1;
-  height: 72px;
+  height: 100%;
   justify-content: center;
   background-color: #3c95ff;
   color: rgb(255, 255, 255);
@@ -801,8 +803,6 @@
   align-items: center;
   flex-direction: row;
   text-align: left;
-  margin-top: auto;
-  margin-bottom: 20px;
 }
 .modal-right-btn {
   flex: 1;
@@ -811,7 +811,6 @@
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   padding: 4px 12px;
   cursor: pointer;
