--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -56,6 +56,7 @@
   flex-direction: row;
   white-space: nowrap;
   overflow: scroll;
+  overflow-y: hidden;
   height: auto;
 }
 .comment-box {
@@ -356,6 +357,8 @@
   justify-content: center;
   display: flex;
   flex-direction: column;
+}
+.detail-input-box {
   position: relative;
 }
 .detail-comment-input textarea {
@@ -537,7 +540,7 @@
 }
 
 .contents-text {
-  margin: 30px 0 20px 0;
+  margin: 16px 0 12px 0;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -565,6 +568,7 @@
   flex-direction: row;
   white-space: nowrap;
   overflow: scroll;
+  overflow-y: hidden;
   height: auto;
   margin-top: 16px;
 }
@@ -703,6 +707,7 @@
 }
 .pagenation a {
   display: flex;
+  cursor: pointer;
 }
 .pagenation li {
   list-style: none;
@@ -789,7 +794,7 @@
 .modal-wrapper {
   max-width: 640px;
   margin: 0 auto;
-  height: 100%;
+  height: 72px;
 }
 .modal {
   width: 100%;
