--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -11,18 +11,18 @@
 .search {
   min-width: 288px;
   width: 100%;
-  height: 40px;
   display: flex;
   flex-direction: row;
-  margin: 16px 0;
   position: relative;
+  background-color: white;
 }
 .search_bar {
   border-radius: 10px;
   border: none;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
+  height: 40px;
+  margin: 16px 0;
   background-color: #f1f3f5;
   padding-left: 32px;
   position: relative;
@@ -50,6 +50,34 @@
 .logo img {
   width: 100%;
   margin: auto;
+}
+.banner-box {
+  min-width: 320px;
+}
+.banner {
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  height: 100%;
+  padding: 16px;
+  background-color: #3d95fe;
+}
+.banner span {
+  font-size: calc(30px + 2vw);
+  margin-bottom: 16px;
+  display: block;
+}
+.banner p {
+  margin: 0;
+  font-size: calc(15px + 1vw);
+  color: white;
+  font-weight: 500;
+}
+.banner img {
+  width: 100%;
+  max-height: 322px;
+  display: block;
+  object-fit: cover;
 }
 .comment-list {
   display: flex;
@@ -453,6 +481,7 @@
   font-weight: normal;
   font-size: 13px;
   line-height: 18px;
+  border-top: 1px solid #e9ecef;
   /* identical to box height, or 138% */
 
   display: flex;
@@ -571,9 +600,6 @@
   height: auto;
   margin-top: 16px;
 }
-.detail-prof-percent {
-  box-sizing: border-box;
-}
 .detail-prof-percent p {
   color: #343a40;
   font-style: normal;
@@ -595,6 +621,10 @@
   align-items: center;
   justify-content: center;
   display: flex;
+}
+.detail-prof-percent-list:after {
+  padding-right: 8px;
+  content: "";
 }
 :root {
   --st-dialog-padding: 16px !important;
@@ -696,12 +726,13 @@
   align-items: center;
   font-size: 13px;
   padding: 0 19.5px;
+  margin-top: 20px;
 }
 .pagenation ul {
   padding: 0;
-  flex: 1;
+  min-width: 100px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 320px;
 }
 .pagenation a {
@@ -711,7 +742,7 @@
 .pagenation li {
   list-style: none;
   display: inline;
-  margin: auto;
+  margin: 0 15px;
 }
 .justify-content-end {
   justify-content: flex-end;
@@ -824,11 +855,39 @@
 }
 .modal p {
   margin: 0;
+  display: inline-block;
 }
 .modal span {
   font-weight: bold;
 }
+.no_result {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
+.no_result p {
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: -0.02em;
 
+  /* Gray6 */
+
+  color: #868e96;
+}
+
+.credit span {
+  font-weight: 700;
+}
+.credit ul {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 13px;
+}
+.credit p {
+  margin: 0;
+}
 .bs {
   box-sizing: border-box;
 }
@@ -857,4 +916,6 @@
 .mg-16-side {
   margin-left: 16px;
   margin-right: 16px;
+}
+.bg-white {
 }
