--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -70,14 +70,13 @@ Button::-moz-focus-inner {
   padding: 0;
 }
 #modal_root {
-  bottom: 20px;
+  bottom: 50px;
   position: fixed;
   min-width: 100%;
   overflow: auto;
   z-index: 9999;
 }
 .wrapper {
-  background-color: white;
   min-width: 320px;
   max-width: 640px;
   min-height: 100vh;
@@ -90,4 +89,6 @@ Button::-moz-focus-inner {
 .wrapper section {
   flex: 1;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
