--- a/src/shared/App.css
+++ b/src/shared/App.css
@@ -5,7 +5,7 @@ a,
 span,
 p,
 * {
-  font-family: "Noto Sans KR", sans-serif !important;
+  font-family: Avenir,"-apple-system Noto Sans KR", sans-serif !important;
 }
 
 body,
