--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -14,6 +14,6 @@
   padding-bottom: 40px;
 }
 .footer a {
-  color: #3c95ff;
-  text-decoration: #3c95ff;
+  color: #0085ff;
+  text-decoration: #0085ff;
 }
